# llm-report-generation-main

./: README.md
backend/: README.md  app.py  pyproject.toml
backend/utils/: openai_utils.py  retrievers.py  sales_report.py  test.py
frontend/src/components/: SelectorMenu.tsx
